--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -53,7 +53,7 @@
 	display: flex;
 	justify-content : space-between;
 	background-color: white;
-	padding: 10px;
+	padding: 5px;
 	margin: 5px
 }
 .login-box {
@@ -190,7 +190,11 @@ body {
   font-size: 20px;
 }
 .membership-info h2 {
-  margin-top: 30px;
+  margin-top: 8px;
+  color: #999;
+}
+.membership-info h3 {
+  margin-top: 8px;
   color: #999;
 }
 
@@ -198,4 +202,23 @@ body {
   border-radius: 50%;
   width: 50px;
   height: 50px;
+}
+
+
+.search {
+  background: orange;
+  border: none;
+  padding: 15px;
+  color: #000000;
+  font-size: 0.8rem;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background 0.3s ease;
+  margin-bottom: 20px;
+}
+.search nth:first-child{
+	width: 100%;
+}
+.search:hover {
+  background: yellow;
 }
