--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -1,69 +1,57 @@
 @charset "UTF-8";
-.img {
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("/img/content.jpg");
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  padding-top: 50px;
-}
-.LOGO {
-  font-size: 2rem;
-  padding-left: 40px;
-  font-weight: bolder;
-}
-.menu {
-  font-size: 1.5rem;
-  font-weight: bolder;
-}
-.header_right {
-  padding-right: 40px;
-  font-size: 1.5rem;
-  font-weight: bolder;
-}
-
-.header h1 {
-  font-size: 4rem;
-}
-.mypage {
-  font-size: 2.5rem;
-  padding-bottom: 50px;
-  font-weight: bolder;
-}
-
-.section {
-  width: 100%;
-  padding-top: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.info {
-  display: flex;
-  font-size: 1.5rem;
-  font-weight: bolder;
-  align-items: center;
-  justify-content: space-between;
-  width: 600px;
-  height: 40px;
+.container {
+  max-width: 600px;
+  margin: 20px auto;
   padding: 20px;
-}
-.text {
-  align-items: center;
-  width: 100px;
-  border-color: black;
-  border: 5px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.info h1 {
-  padding-left: 20px;
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+.form-group p {
+	color : blue;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  background-color: #45a049;
 }
