--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,46 +1,80 @@
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-    }
-    #container {
-        width: 80%;
-        max-width: 800px;
-        background: white;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-        box-sizing: border-box;
-    }
-    h1, h2, h3, h4 {
-        color: #333;
-        margin: 10px 0;
-    }
-    h1 {
-        font-size: 2em;
-    }
-    h2 {
-        font-size: 1.5em;
-    }
-    h3, h4 {
-        font-size: 1.2em;
-        color: #555;
-    }
-    p {
-        font-size: 1.1em;
-        color: #666;
-    }
-    #mainImg {
-        max-width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 20px;
-    }
+body {
+  font-family: "Arial", sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  background-color: #e6e1e1;
+}
+
+#container {
+  width: 100%;
+  max-width: 800px;
+  margin: 20px auto;
+  background: honeydew;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+}
+
+h1 {
+  margin-bottom: 20px;
+  font-size: 3rem;
+  font-weight: bolder;
+  font-family: sans-serif;
+  color: black;
+}
+
+h2 {
+  font-size: 1.5rem;
+  color: darkblue;
+  margin-top: 10px;
+}
+
+p {
+  font-weight: bolder;
+  margin-top: 10px;
+}
+
+#mainImg {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+p {
+  margin-bottom: 15px;
+  color: #555;
+}
+
+form {
+  margin-top: 20px;
+}
+
+input[type="submit"] {
+  background-color: #f88c1d;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+  background-color: #e76f00;
+}
+
+a {
+  color: #f88c1d;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: #555;
+}
