--- a/src/main/resources/static/css/location.css
+++ b/src/main/resources/static/css/location.css
@@ -1,17 +1,21 @@
-.location {
-  background-color: antiquewhite;
-  width: 100%;
-  height: 50px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+.type-box{
+	display:flex;	
 }
-.locationTableChild {
-  display: flex;
-  background-color: aqua;
-  width: 100%;
-  height: 20px;
-  justify-content: center;
-  align-items: center;
+.tpye-box1{
+	background-color :orange;
+	width:500px;
+	height:500px;
+}
+.tpye-box-child {
+    display:none;
+    width: 55px;
+    height: 55px;
+    background-color: lightblue;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
+.button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
 }
