대충css동문님꺼추가
20240812

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -25,10 +25,20 @@
   padding: 10px;
   font-weight: bold;
 }
+.header_right_menu a {
+  padding-right: 30px;
+}
 .LOGO {
   padding: 20px;
   font-size: 3rem;
   font-weight: bold;
+  border: 4px solid #00796b; /* 청록색 테두리 */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.LOGO:hover {
+  transform: scale(1.1); /* 마우스 오버 시 확대 효과 */
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3); /* 확대 시 그림자 효과 증가 */
 }
 .menu {
   align-items: center;
@@ -43,18 +53,16 @@
   width: 100%;
   height: 80vh;
 }
-.searchBox{
-	display: flex;
-	justify-content : space-between;
-	
-
+.searchBox {
+  display: flex;
+  justify-content: space-between;
 }
-.search{
-	display: flex;
-	justify-content : space-between;
-	background-color: white;
-	padding: 5px;
-	margin: 5px
+.search {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 5px;
+  margin: 5px;
 }
 .login-box {
   background: rgba(255, 255, 255, 0.1);
@@ -117,7 +125,6 @@
   width: 100%;
   background-color: rgb(23, 78, 166);
 }
-
 /*====== (keyframes) ===========================*/
 @keyframes textSlide {
   from {
@@ -145,21 +152,21 @@
     display: none;
   }
 }
-
 .membership-list {
-  width: 1000px;
+  width: 80%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
   margin: auto;
-  border-radius: 15px;
+  padding-top: 90px;
 }
 .membership-card {
   display: flex;
-  width: 49%;
+  width: 50%;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 20px;
   margin: 5px;
 }
 img {
@@ -168,42 +175,35 @@ img {
   height: 200px;
   margin: 20px;
 }
-
 body {
-  background-color: beige;
+  background-color: #e6e1e1;
 }
-
 .membership-name {
   font-weight: bolder;
   font-size: 20px;
 }
-
 .membership-info {
   width: 200px;
   height: 200px;
   margin: 20px;
   border-radius: 15px;
 }
-
 .membership-info h1 {
   font-weight: bolder;
   font-size: 20px;
 }
 .membership-info h2 {
-  margin-top: 8px;
-  color: #999;
+  margin-top: 15px;
+  width: 320px;
 }
 .membership-info h3 {
   margin-top: 8px;
-  color: #999;
 }
-
 .user-img {
   border-radius: 50%;
   width: 50px;
   height: 50px;
 }
-
 
 .search {
   background: orange;
@@ -216,8 +216,8 @@ body {
   transition: background 0.3s ease;
   margin-bottom: 20px;
 }
-.search nth:first-child{
-	width: 100%;
+.search nth:first-child {
+  width: 100%;
 }
 .search:hover {
   background: yellow;
