--- a/src/main/resources/static/css/locationType.css
+++ b/src/main/resources/static/css/locationType.css
@@ -26,6 +26,9 @@
     font-size: 16px;
     cursor: pointer;
 }
+.locationType{
+	
+}
 /* 참고용
 .locationType {
     position: relative;  버튼을 기준으로 박스를 배치하기 위해 부모 요소를 relative로 설정 
@@ -113,6 +116,7 @@
 
 
 /*임시 클럽 테이블*/
+
 .ClubTableBody {
     width: 1500px; 
     background-color: pink;
