--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -153,9 +153,9 @@
   }
 }
 .membership-list {
-  width: 80%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
@@ -164,10 +164,9 @@
 }
 .membership-card {
   display: flex;
-  width: 50%;
   background-color: white;
   border-radius: 20px;
-  margin: 5px;
+  margin: 20px;
 }
 img {
   border-radius: 15px;
@@ -184,9 +183,16 @@ body {
 }
 .membership-info {
   width: 200px;
-  height: 200px;
+  height: 120px;
+  display: flex;
+  flex-direction: column;
   margin: 20px;
   border-radius: 15px;
+}
+#host{
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .membership-info h1 {
   font-weight: bolder;
@@ -194,7 +200,7 @@ body {
 }
 .membership-info h2 {
   margin-top: 15px;
-  width: 320px;
+  width: 100%;
 }
 .membership-info h3 {
   margin-top: 8px;
