--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -43,11 +43,27 @@ nav a:hover {
 }
 
 .info h1 {
-    font-size: 1.5em;
+    font-size: 2.5em;
     margin: 10px 0;
 }
 
 /* 특정 상태나 조건에 따라 추가적인 스타일을 적용할 수 있음 */
 .info h1:nth-child(2) {
     color: #333;
+}
+
+.info img {
+	width: 400px;
+	height: 400px;
+	border-radius: 200px;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
 }
