--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,6 +10,11 @@
     background-position: 0% 50%;
   }
 }
+#member-info {
+	margin: 10px;
+	width: 300px;
+	
+}
 .header_left {
   display: flex;
   justify-content: space-between;
