--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,15 +10,66 @@
     background-position: 0% 50%;
   }
 }
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	height: 300px;
+	
+}
 .header_left {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+  height: 100%;
 }
-.header_right {
-  display: flex;
-  font-weight: bold;
+.header_right{
+	margin-top: 200px;
+	background-color: white;
+	border-radius: 5%;
+	height: 150px;
+	width: 300px;
+	 display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+	
+}
+.index-member-area{
+	display: flex;
+	justify-content: space-between;
+}
+.index-profile-img{
+	width: 50px;
+	height: 50px;
+	
+}
+.index-member-menu{
+	 display: flex;
+    justify-content: space-around;
+    height: 30%;
+    align-items: center;
+  
+    
+	
+}
+.index-member-memberinfo{
+	    margin: auto;
+}
+.index-member-link{
+	
+	height: 100%;
+	width: 33%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	background: BEIGE;
+	
+}
+.index-member-nickname{
+	font-weight: bold;
 }
 .header_right_menu {
   font-size: 1.5rem;
