오류 수정후 일단커밋

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -78,3 +78,16 @@ a {
 a:hover {
   color: #555;
 }
+.reply-form {
+	display: none;
+}
+
+.update-form {
+	display: none;
+}
+.comment{
+	padding-left: 50px;
+}
+.re-comment{
+	padding-left: 100px;
+}
