--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -243,7 +243,15 @@ body {
 	background-color : white;
 	width: fit-content; /*글자크기에 맞게 width값 주기*/
 	border: 1px solid grey;
-	padding:2.5px;
+	padding:2.5px 5px;
 	border-radius: 15px;
 	margin:1px;
+}
+
+.typeText{
+	padding :1px;
+	display:flex;
+	justify-content : center;
+	align-items : center;
+	text-align : center;
 }
