--- a/src/main/resources/static/css/chatting.css
+++ b/src/main/resources/static/css/chatting.css
@@ -64,10 +64,12 @@ for(int i=1; i<=100; i++) {
 	border-radius: 50%;
 }
 
-#test {
-	font-size: 40px;
+.all {
+	display: flex;
 }
-
+.nm {
+	padding-left: 8px;	
+}
 li {
 	list-style: none;
 }
@@ -224,7 +226,7 @@ main .chat_count {
 }
 
 .chat li>div {
-	padding: 10px;
+	padding: 8px;
 	display: flex;
 }
 
@@ -241,7 +243,7 @@ main .chat_count {
 }
 
 .chat li>div .nickname {
-	padding: 3px;
+	 padding-bottom: 2px;  
 }
 
 .chat li>div .message {
