--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,66 +10,15 @@
     background-position: 0% 50%;
   }
 }
-
-.header {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	height: 300px;
-	
-}
 .header_left {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
-  height: 100%;
 }
-.header_right{
-	margin-top: 200px;
-	background-color: white;
-	border-radius: 5%;
-	height: 150px;
-	width: 300px;
-	 display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-	
-}
-.index-member-area{
-	display: flex;
-	justify-content: space-between;
-}
-.index-profile-img{
-	width: 50px;
-	height: 50px;
-	
-}
-.index-member-menu{
-	 display: flex;
-    justify-content: space-around;
-    height: 30%;
-    align-items: center;
-  
-    
-	
-}
-.index-member-memberinfo{
-	    margin: auto;
-}
-.index-member-link{
-	
-	height: 100%;
-	width: 33%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	
-	background: BEIGE;
-	
-}
-.index-member-nickname{
-	font-weight: bold;
+.header_right {
+  display: flex;
+  font-weight: bold;
 }
 .header_right_menu {
   font-size: 1.5rem;
@@ -83,7 +32,7 @@
   padding: 20px;
   font-size: 3rem;
   font-weight: bold;
-  border: 4px solid #00796b; /* 청록색 테두리 */
+  border: 4px solid #00796B; /* 청록색 테두리 */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -125,7 +74,7 @@
 }
 .login-box h1 {
   margin-bottom: 30px;
-  color: #271e04;
+  color: #271E04;
   font-size: 2em;
 }
 .textbox {
@@ -137,7 +86,7 @@
   left: 10px;
   top: 50%;
   transform: translateY(-50%);
-  color: #271e04;
+  color: #271E04;
 }
 .textbox input {
   width: 100%;
@@ -145,7 +94,7 @@
   background: rgba(255, 255, 255, 0.2);
   border: none;
   border-radius: 5px;
-  color: #0a0a0a;
+  color: #0A0A0A;
   font-size: 1em;
 }
 .textbox input::placeholder {
@@ -153,7 +102,7 @@
 }
 .btn {
   width: 100%;
-  background: #ffcc33;
+  background: #FFCC33;
   border: none;
   padding: 15px;
   color: #000000;
@@ -164,7 +113,7 @@
   margin-bottom: 20px;
 }
 .btn:hover {
-  background: #ff9966;
+  background: #FF9966;
 }
 .login-boxs {
   display: flex;
@@ -226,7 +175,7 @@ img {
   margin: 20px;
 }
 body {
-  background-color: #e6e1e1;
+  background-color: #E6E1E1;
 }
 .membership-name {
   font-weight: bolder;
@@ -261,7 +210,6 @@ body {
   width: 50px;
   height: 50px;
 }
-
 .search {
   background: orange;
   border: none;
@@ -279,7 +227,6 @@ body {
 .search:hover {
   background: yellow;
 }
-
 /* 08-21 14:53 채승훈 시작*/
 .locationTypeBox {
 	font-size: 12px;	
@@ -298,7 +245,6 @@ body {
 	border-radius: 15px;
 	margin:1px;
 }
-
 .typeText{
 	padding :1px;
 	display:flex;
