--- a/src/main/resources/static/css/myMembership.css
+++ b/src/main/resources/static/css/myMembership.css
@@ -49,7 +49,7 @@ body{
 }
 
 /* 버튼 스타일 */
-#make-club , #all-club-button, #manage-club-button, #wait-club-button {
+#make-club , #all-club-button, #manage-club-button, #wait-club-button , #update-club {
     padding: 10px 20px;
     margin: 5px;
     border: none;
@@ -60,6 +60,6 @@ body{
     font-size: 16px;
 }
 
-#all-club-button:hover, #manage-club-button:hover, #wait-club-button:hover {
+#all-club-button:hover, #manage-club-button:hover, #wait-club-button:hover, #update-club-button:hover {
     background-color: #0056b3;
 }
