--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,17 +1,29 @@
 .main_header{
-	background-color: orange;
+	background-color: rgb(100, 154, 188);
 	position: fixed;
 	width: 100%;
+	height :70px;
+	box-shadow: 0px -2px 10px rgba(0, 0, 0, 1);
+}
+.main_header_body{
+	width: 1520px;
+	height :100%;
 	display: flex;
 	justify-content: space-between;
 	align-items : center;
-	box-shadow: 0px -2px 10px rgba(0, 0, 0, 1);
-	padding: 10px;
+	margin : auto;
 }
+/*헤더 왼쪽*/
 .main_header_left{
 	display: flex;
-	margin-left: 185px;
 }
+.main_header_left a{
+	font-size : 20px;
+	font-weight : bold;
+	background-color: red;
+	margin-right: 5px;
+}
+/*헤더 센터*/
 .main_header_center{
 	display: flex;
 	justify-content: space-between;
@@ -19,15 +31,19 @@
 	text-align: center;
 	font-size: 55px;
 	width: 400px;
+	height : 100%;
 	background-color: red;
-	
+	font-weight : bold;
 }
 .main_header_center_text{
 	margin : auto;
 }
-.main_header_rigth{
+/*헤더 오른쪽*/
+.main_header_right{
 	display: flex;
-	
-	background-color: red;
-	margin-right: 180px;
+}
+.main_header_right_menu a{
+	font-size : 20px;
+	background-color: red;	
+	font-weight : bold;
 }
