--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -229,7 +229,7 @@ body {
   background: yellow;
 }
 
-/* 08-21 14:53 채승훈 시작*/
+/* 08-21 14:53 채승훈 시작 클럽안 내용들*/ 
 .locationTypeBox {
 	font-size: 12px;	
 	width : 200px;
@@ -257,3 +257,24 @@ body {
 }
 
 /* 그냥 박스 상자 */
+/* 08-25 채승훈 추가 */
+.body_img_box{
+	top : 100px;
+	margin : auto;
+	width: 1520px;
+	height: 500px;
+	background-color: orange;
+}
+
+
+
+.locationTypeBody{
+	background-color: orange;
+}
+.locationTypeBodyBox{
+	background-color: pink;
+	width: 1520px;
+	height: auto;
+	margin : auto;
+}
+
