--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -89,19 +89,25 @@ a:hover {
 	width: 100%;
 	max-width: 820px;
 	margin: 10px;
-	border: 1px solid;
 	border-radius: 10px;
+	background-color: white;
 	
 }
 .re-comment{
 	margin: 10px 0px;
 	
+	
+}
+.re-comment >.comment-head{
+	border-top: 2px dashed;
+	margin-top: 10px;
+	padding-top: 5px;
 }
 
 div[id^="comment-box"] {
    
-	border: 1px solid;
-	width: 800px;
+	
+	width: 790px;
 	height: 100px;
 	display: flex;
 	justify-content: space-between;
@@ -113,6 +119,8 @@ div[id^="comment-box"] {
 }
 div[id^="recomment-box"] {
 	display: none;
+	
+	margin-top: 10px;
 }
 
 div[id^="comment-box"] > input{
@@ -183,7 +191,9 @@ button > img {
 #textbox > button {
 	height: 50%;
 }
-
+.comment > p{
+	padding: 10px;
+}
 
 
 
