--- a/src/main/resources/static/css/chatting.css
+++ b/src/main/resources/static/css/chatting.css
@@ -273,11 +273,17 @@ main .chat_count {
 	padding: 5px;
 	border-radius: 3px;
 	box-shadow: 0px 2px 3px 0px rgb(0 0 0/ 25%);
-	display: inline-block;
+	/*display: inline-block;*/ 
+	display: flex;
+	flex-direction: column;
 	max-width: 250px;
 	max-height: 400px;
 	overflow-y: auto;
 	word-break: break-all;
+}
+
+.chat .chat_content img {
+	size: auto;
 }
 
 .chat .chat_me .chat_content {
@@ -350,7 +356,10 @@ main .chat_count {
 	padding: 5px;
 }
 
-/* 참가인원 */
+#cancle {
+	font-size: 12px;
+}
+
 
 /* 채팅방 안 */
 @media ( max-width : 1024px) {
