--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -168,7 +168,7 @@
   border-radius: 20px;
   margin: 20px;
 }
-img {
+.membership-img a img {
   border-radius: 15px;
   width: 200px;
   height: 270px; /* 08-21 채승훈 : 타입 설명란 때문에 잠깐 이미지 크기 키웠음*/
@@ -258,18 +258,27 @@ body {
 
 /* 그냥 박스 상자 */
 /* 08-25 채승훈 추가 */
-.body_img_box{
-	top : 100px;
-	margin : auto;
+.body_img_box_body{
 	width: 1520px;
-	height: 500px;
+	height: 955px;
 	background-color: orange;
+	margin: auto;
+	padding:90px 20px 20px 20px;
 }
-
-
+.body_img_box{
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0, 128, 255);
+}
+.body_img{
+	width: 100%;
+	height: 100%;
+}
 
 .locationTypeBody{
 	background-color: orange;
+	position: sticky;
+	top: 70px;
 }
 .locationTypeBodyBox{
 	background-color: pink;
@@ -277,4 +286,5 @@ body {
 	height: auto;
 	margin : auto;
 }
+/* 스크롤 없애기 */
 
