--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -265,7 +265,6 @@ body {
 .body_img_box {
   width: 100%;
   height: 100%;
-  background-color: rgb(0, 128, 255);
 }
 .body_img {
   width: 100%;
@@ -283,4 +282,9 @@ body {
   height: auto;
   margin: auto;
 }
-/* 스크롤 없애기 */
+
+
+/* 샐릭트를 버튼식으로 바꾸기 */
+
+
+
