--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -1,13 +1,35 @@
 @charset "UTF-8";
+nav {
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header_menu {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  display: inline-block;
+}
+
+.header_menu:hover {
+  background-color: #575757;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
+  min-width: 600px;
 }
 
 .container {
   max-width: 600px;
+  min-width: 600px;
   margin: 20px auto;
   padding: 20px;
   background-color: #fff;
@@ -17,20 +39,24 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 1.5rem;
+  font-weight: bolder;
   margin-bottom: 20px;
+}
+
+h2 {
+  padding-bottom: 10px;
 }
 
 .form-group {
   margin-bottom: 15px;
 }
-.form-group p {
-	color : blue;
+.form-group h2 {
+  font-size: 1rem;
+  font-weight: bolder;
 }
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
+.form-group p {
+  color: blue;
 }
 
 input,
@@ -54,4 +80,8 @@ button {
 
 button:hover {
   background-color: #45a049;
+}
+
+#checkbox {
+  width: 20px;
 }
