--- a/src/main/resources/static/css/userInfo.css
+++ b/src/main/resources/static/css/userInfo.css
@@ -1,20 +1,24 @@
+body {
+  background-color: #f4f4f4;
+}
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 #container {
-  background-color: cornsilk;
-  width: 100%;
+  background-color: honeydew;
   height: 100vh;
-  max-width: 1000px;
-  min-width: 500px;
-  min-height: 250px;
+  max-width: 800px;
+  min-width: 800px;
   display: flex;
   flex-direction: column;
   padding-top: 100px;
   padding: 50px;
 }
+
 #header {
   width: 100%;
   height: 50px;
@@ -23,16 +27,19 @@ main {
   align-items: center;
   font-size: 1.5rem;
 }
-.text div h1 {
-  font-size: 1rem;
-  font-weight: bolder;
-}
 
 #section {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+#section img {
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
 }
 
 button {
@@ -45,9 +52,17 @@ button {
   width: 100%;
 }
 .text {
-  width: 100%;
+  width: 80%;
   justify-content: space-around;
-  padding: 10px;
+  padding: 20px;
+}
+.text div h1 {
+  font-size: 1rem;
+  font-weight: bolder;
+}
+#group {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 #group p {
   margin-right: 20px;
@@ -69,22 +84,24 @@ button {
   overflow-wrap: break-word;
 }
 
-#section img {
-  max-width: 300px;
-  max-height: 300px;
-  width: 100%;
-  height: 100%;
-  border-radius: 100px;
-}
-
 #section2 {
   width: 100%;
   height: 200px;
   padding-top: 100px;
 }
 
+#section2 h1 {
+  font-size: 1.5rem;
+  font-weight: bolder;
+  padding-bottom: 20px;
+}
+
 #section2 div img {
   width: 100px;
   height: 100px;
   border-radius: 200px;
+}
+
+.club-img {
+  padding: 10px;
 }
