--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,18 +3,68 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
-  background-color: #e6e1e1;
+  background-color: white !important;
 }
 
 #container {
   width: 100%;
   max-width: 800px;
   margin: 20px auto;
-  background: honeydew;
-  padding: 20px;
+  background: #F4F4F4;
+ 
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  
+ 
+}
+
+#container-top{
+	display: flex;
+	flex-direction: column;
+	background-color: #fefefe;
+	border-radius: 16px;
+	align-items: center;
+	 position: relative;
+    bottom: 60px;
+    width: 90%;
+    padding:10px;
+    
+    
+}
+#hostImg {
+	
+ position: relative;
+    bottom: 55px;
+}
+
+
+#hostName {
+	 position: relative;
+    bottom: 55px;
+	
+}
+#membershipTitle{
+	
+	 position: relative;
+    bottom: 35px;
+	
+}
+
+#membershipTitle > h1{
+	font-weight: bold;
+	font-size: 1.5rem;
+}
+
+#info-container {
+	width: 100%;
+	padding:20px;
+	
 }
 
 h1 {
@@ -27,7 +77,7 @@ h1 {
 
 h2 {
   font-size: 1.5rem;
-  color: darkblue;
+  
   margin-top: 10px;
 }
 
@@ -39,8 +89,17 @@ p {
 #mainImg {
   width: 100%;
   height: auto;
-  border-radius: 8px;
-  margin-bottom: 20px;
+  border-radius: 8px 8px 0px 0px;
+  margin : 0px;
+}
+#info-container {
+	
+	line-height: 2;
+}
+#info-container > p > img{
+	
+	max-width: 90%
+	
 }
 
 p {
@@ -197,17 +256,71 @@ button > img {
 
 
 
+#hostInfo {
+	display: flex;
+	flex-direction: row;
+}
+#hostInfo-img{
+	    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 10px;
+}
+
+	
 
 
 
+.host-user-img{
+	margin:0px;
+	width: 50px;
+	height:50px;
+	border-radius: 50%;
+	
+}
+
+
+#middle-container-top{
+	margin-bottom: 20px;
+}
+
+#middle-container {
+	width:100%;
+	padding : 20px;
+}
+
+#name-and-info{
+	margin-left: 20px;
+}
+
+#hostInfo-name{
+	margin-bottom:10px;
+}
+
+#together > p{
+	margin-top:20px;
+}
+#imageContainer{
+	margin-top: 20px;
+}
 
 
 
+.locTyBox {
+	width: 100%;
+    padding: 20px;
+	
+}
 
-
-
-
-
+#asd{
+	text-align: center;
+	padding: 5px;
+	margin-bottom: 3px;
+	width: 100%;
+	border-bottom: 2px dashed; 
+}
 
 
 
