--- a/src/main/resources/static/css/membershipPage.css
+++ b/src/main/resources/static/css/membershipPage.css
@@ -3,19 +3,70 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
-  background-color: #e6e1e1;
+  background-color: white !important;
 }
 
-main {
-  width: 80%;
-  max-width: 900px;
+#container {
+  width: 100%;
+  max-width: 800px;
   margin: 20px auto;
-  background: honeydew;
-  padding: 20px;
+  background: #F4F4F4;
+ 
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  
+ 
 }
-/* 멤버쉽 이름 : main.membership.membershipName */
+
+#container-top{
+	display: flex;
+	flex-direction: column;
+	background-color: #fefefe;
+	border-radius: 16px;
+	align-items: center;
+	 position: relative;
+    bottom: 60px;
+    width: 90%;
+    padding:10px;
+    
+    
+}
+#hostImg {
+	
+ position: relative;
+    bottom: 55px;
+}
+
+
+#hostName {
+	 position: relative;
+    bottom: 55px;
+	
+}
+#membershipTitle{
+	
+	 position: relative;
+    bottom: 35px;
+	
+}
+
+#membershipTitle > h1{
+	font-weight: bold;
+	font-size: 1.5rem;
+}
+
+#info-container {
+	width: 100%;
+	padding:20px;
+	
+}
+
 h1 {
   margin-bottom: 20px;
   font-size: 3rem;
@@ -23,72 +74,46 @@ h1 {
   font-family: sans-serif;
   color: black;
 }
-/* 멤버쉽 정보 : main.membership.membershipInfo */
+
 h2 {
   font-size: 1.5rem;
-  font-weight: 500;
+  
+ 
 }
-/* 인원 현황 : membershipUserCount /
-              main.membership.membershipMax */
+
 p {
-  font-size: 1.3rem;
   font-weight: bolder;
-  margin-bottom: 15px;
-  color: #004d40;
-}
-/* 호스트 : main.member.nickname */
-h4 {
-  display: flex;
-  align-items: center;
-  color: #00796b;
-  margin-bottom: 20px;
-}
-
-#mainImg {
-  border-radius: 8px;
-  margin-bottom: 20px;
-  border: 3px solid #00796b;
-  border-radius: 15px;
-  width: 200px;
-  height: 200px;
-}
-#hostImg {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-left: 10px;
-}
-
-.memberTable {
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid #00796b;
-  background: #f1f8e9;
-}
-
-.memberTable ul {
-  list-style: none;
-  padding: 0;
-}
-
-.memberTable li {
-  margin-bottom: 10px;
-  color: #004d40;
-}
-
-.allmemberImg {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-}
-
-form {
   margin-top: 10px;
 }
 
+#mainImg {
+  width: 100%;
+  height: auto;
+  border-radius: 8px 8px 0px 0px;
+  margin : 0px;
+}
+#info-container {
+	
+	line-height: 2;
+}
+#info-container > p > img{
+	
+	max-width: 90%
+	
+}
+
+p {
+  margin-bottom: 15px;
+  color: #555;
+}
+
+form {
+  margin-top: 20px;
+}
+
 input[type="submit"] {
-  background-color: #00796b;
-  color: #ffffff;
+  background-color: #f88c1d;
+  color: #fff;
   border: none;
   padding: 10px 20px;
   text-transform: uppercase;
@@ -99,14 +124,278 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #004d40;
+  background-color: #e76f00;
 }
 
-#toIndex {
-  font-size: 1.5rem;
-  font-weight: bolder;
+a {
+  color: #f88c1d;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
 }
 
-#toIndex:hover {
-  color: blue;
+a:hover {
+  color: #555;
+}
+
+
+.update-form {
+	display: none;
+}
+.comment,
+.re-comment{
+	padding : 8px;
+	width: 100%;
+	max-width: 820px;
+	margin: 10px;
+	border-radius: 10px;
+	background-color: white;
+	
+}
+.re-comment{
+	margin: 10px 0px;
+	
+	
+}
+.re-comment >.comment-head{
+	border-top: 2px dashed;
+	margin-top: 10px;
+	padding-top: 5px;
+}
+
+div[id^="comment-box"] {
+   
+	
+	width: 790px;
+	height: 100px;
+	display: flex;
+	justify-content: space-between;
+	padding: 8px;
+	align-items: center;
+	background-color: #E5E5E5;
+	border-radius: 10px;
+	margin-top: 10px;
+}
+div[id^="recomment-box"] {
+	display: none;
+	
+	margin-top: 10px;
+}
+
+div[id^="comment-box"] > input{
+	height: 50%;
+	width: 60%;
+	margin: 5px;
+	
+}
+
+
+#comment-container{
+	display: flex;
+	flex-direction : column;
+	justify-content :center;
+	align-items: center;
+	margin: 0 50px;
+	
+}
+.comment-head{
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 10px;
+}
+
+.comment-head > h1 {
+	font-weight: bold;
+	font-size: 1.2rem;
+	
+}
+.comment-text{
+	margin-bottom: 5px;
+}
+button {
+  background-color: #f88c1d;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #e76f00;
+}
+
+button > img {
+	width: 20px;
+	height: 15px;
+	margin: 0px;
+	padding: 0px;
+	
+}
+.recomment-box{
+	margin-left: 10px;
+
+}
+.prof{
+	display: flex;
+	align-items: center;
+}
+.prof img{
+	margin: 0;
+	margin-left: 5px;
+}
+#textbox > button {
+	height: 50%;
+}
+.comment > p{
+	padding: 10px;
+}
+
+
+
+#hostInfo {
+	display: flex;
+	flex-direction: row;
+}
+#hostInfo-img{
+	    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+	
+
+
+
+#middle-container-top{
+	margin-bottom: 20px;
+}
+
+#middle-container {
+	width:100%;
+	padding : 20px;
+}
+
+#name-and-info{
+	margin-left: 20px;
+}
+
+#hostInfo-name{
+	margin-bottom:10px;
+}
+
+#together > p{
+	margin-top:20px;
+}
+#imageContainer{
+	margin-top: 20px;
+}
+
+
+
+.locTyBox {
+	width: 100%;
+    padding: 20px;
+	
+}
+
+#asd{
+	text-align: center;
+	padding: 5px;
+	margin-bottom: 3px;
+	width: 100%;
+	border-bottom: 2px dashed; 
+}
+
+
+#option {
+	width:100%;
+	display:flex;
+	justify-content: space-around;
+}
+
+.allmemberImg{
+	width:50px;
+	height:50px;
+	border-radius: 50%;
+}
+
+#accordionExample {
+	width:70%;
+}
+.memberTable{
+	border: 1px solid;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.member-grade{
+	width:90px;
+	text-align: center;
+	font-weight: bold;
+}	
+
+.member-grade span{
+	color:rgb(252, 177, 3);
+	font-size: 32px;
+}
+
+.member-img-info-hobby-location{
+	display:flex;
+}
+.member-info{
+	color:gray;
+}
+.member-info-hobby-location{
+	display:flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.member-hobby-location{
+	
+	border: 1px solid black;
+    border-radius: 20px;
+    width: 134px;
+    height: 28px;
+    text-align: center;
+    background: beige;
+    font-weight: bold;
+	
+}
+
+.nickname-age-fm-manner{
+	display:flex;
+}
+.nickname-age-fm{
+	    width: 90px;
+    text-align: center;
+}
+.nickname{
+	font-weight: bold;
+	
+}
+.age-fm{
+	font-size: 32px;
+	display: flex;
+	    justify-content: space-around;
+}
+.manner{
+	
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.manner > p{
+	margin: 20px;
+}
+#man {
+	color: blue;
+}
+#femail{
+	color:pink;
 }
