--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -5,12 +5,21 @@ body {
   padding: 0;
   background-color: #f4f4f4;
 }
-
+#LOGO {
+  font-size: 1.5rem;
+}
 /* 네비게이션 바 스타일 */
 nav {
   background-color: #333;
-  padding: 10px;
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 nav a {
