--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -4,15 +4,36 @@ nav {
   padding: 10px;
   text-align: center;
   display: flex;
+  justify-content: space-between;
+}
+
+nav div {
+  display: flex;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+}
+
+nav a:hover {
+  background-color: #575757;
+}
+
+#LOGO {
+  width: 100px;
+  font-size: 1.5rem;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .header_menu {
   color: #fff;
   text-decoration: none;
   padding: 10px 20px;
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header_menu:hover {
