--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -42,6 +42,11 @@ p {
   border-radius: 8px;
   margin-bottom: 20px;
 }
+.user-img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
 
 p {
   margin-bottom: 15px;
@@ -119,8 +124,7 @@ div[id^="comment-box"] {
 }
 div[id^="recomment-box"] {
 	display: none;
-	
-	margin-top: 10px;
+
 }
 
 div[id^="comment-box"] > input{
@@ -164,7 +168,10 @@ button {
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
-
+.btn.active {
+    background-color: #28a745; 
+    color: #fff;
+}
 button:hover {
   background-color: #e76f00;
 }
