--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -6,12 +6,13 @@
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 1);
 }
 .main_header_body {
-  width: 1520px;
   height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: auto;
+  width: 100%;
+  max-width: 1520px;
 }
 /*헤더 왼쪽*/
 .main_header_left {
@@ -19,7 +20,6 @@
   align-items: center;
   justify-content: flex-start;
   height: 100%;
-  width: 410px;
 }
 .main_header_left a {
   font-size: 18px;
@@ -34,12 +34,10 @@
   align-items: center;
   text-align: center;
   font-size: 50px;
-  width: 700px;
   height: 100%;
   font-weight: bold;
 }
 .main_header_center_text {
-  margin: auto;
 }
 /*헤더 오른쪽*/
 .main_header_right {
@@ -47,7 +45,6 @@
   align-items: center;
   justify-content: flex-end;
   height: 100%;
-  width: 410px;
   background-color: rgb(255, 185, 100);
   font-size: 18px;
   font-weight: bold;
