--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -256,11 +256,12 @@ body {
 /* 그냥 박스 상자 */
 /* 08-25 채승훈 추가 */
 .body_img_box_body {
-  width: 1520px;
+  width: 100%;
   height: 955px;
   background-color:orange;
   margin: auto;
   padding: 90px 20px 20px 20px;
+  max-width: 1520px;
 }
 .body_img_box {
   width: 100%;
@@ -286,7 +287,6 @@ body {
    display:none;
  }
 #locationLaNameForm{
-	
 	font-size:20px;
 	padding :10px;
 	font-weight: bold;
@@ -312,7 +312,7 @@ body {
 
 /*중단 locationLa 이벤트 놈들*/
 
-/*중단 locationType 이벤트 놈들*/
+/*중단 locationS 이벤트 놈들*/
 #locationSNameForm input[type="checkbox"] {
    display:none;
  }
@@ -323,12 +323,39 @@ body {
 	padding:0px 10px 0px 10px;
 }
 
-/*중단 locationType 이벤트 놈들*/
+/*중단 locationS 이벤트 놈들*/
 
-
+/*증딘 typeLa 이벤트 놈들*/
 #typeLaNameSelect input[type="checkbox"] {
    display:none;
  }
+#typeLaNameSelect{
+	font-size:18px;
+	padding :10px;
+	font-weight: bold;
+	height: 100%;
+}
+.typeLaCss{
+	padding:0px 10px 0px 10px;
+	cursor: pointer;
+}
+.typeLaCss:hover{
+	background-color: rgb(255, 142, 4);
+	border-radius : 20px;
+}
+#typeLaNameLabel{
+	padding:0px 10px 0px 10px;
+	cursor: pointer;
+}
+#typeLaNameLabel:hover{
+	background-color: rgb(255, 142, 4);
+	border-radius : 20px;
+}
+
+
+/*증딘 typeLa 이벤트 놈들*/
+ 
+ 
  
  #typeSNameForm input[type="checkbox"] {
    display:none;
