--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,15 +1,14 @@
 body {
   font-family: "Arial", sans-serif;
   line-height: 1.6;
-  margin: 0;
-  padding: 0;
   background-color: #e6e1e1;
 }
 
 #container {
   width: 100%;
   max-width: 800px;
-  margin: 20px auto;
+  /*08-29 채승훈 마진겹칩현상? 때문에 20px 뺌*/
+  margin: auto;
   background: honeydew;
   padding: 20px;
   border-radius: 12px;
@@ -31,10 +30,6 @@ h2 {
   margin-top: 10px;
 }
 
-p {
-  font-weight: bolder;
-  margin-top: 10px;
-}
 
 #mainImg {
   width: 100%;
@@ -48,10 +43,7 @@ p {
   height: 50px;
 }
 
-p {
-  margin-bottom: 15px;
-  color: #555;
-}
+
 
 form {
   margin-top: 20px;
