--- a/src/main/resources/static/css/memberDelete.css
+++ b/src/main/resources/static/css/memberDelete.css
@@ -1,12 +1,36 @@
 @charset "UTF-8";
+/* 헤더 nav */
+#LOGO {
+  font-size: 1rem;
+}
+
 nav {
   background-color: #333;
-  padding: 10px;
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+nav div {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  display: inline-block;
+}
+
+nav a:hover {
+  background-color: #575757;
+}
+
+/* 헤더 nav */
+
 .header_menu {
   color: #fff;
   text-decoration: none;
