--- a/src/main/resources/static/css/userInfo.css
+++ b/src/main/resources/static/css/userInfo.css
@@ -1,15 +1,12 @@
-body {
-  background-color: #f4f4f4;
-}
-
 main {
+  background-color: rgb(244, 243, 234);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #container {
-  background-color: honeydew;
+  background-color: rgb(210, 172, 44);
   height: 100vh;
   max-width: 800px;
   min-width: 800px;
@@ -17,15 +14,6 @@ main {
   flex-direction: column;
   padding-top: 100px;
   padding: 50px;
-}
-
-#header {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5rem;
 }
 
 #section {
@@ -42,30 +30,25 @@ main {
   border-radius: 200px;
 }
 
-button {
-  margin-left: 20px;
-}
-
 .info {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
+#group {
+  margin-top: 20px;
+  justify-content: space-around;
+}
+#group p {
+  margin-right: 20px;
+}
 .text {
   width: 80%;
-  justify-content: space-around;
-  padding: 20px;
+  padding-left: 30px;
 }
 .text div h1 {
   font-size: 1rem;
   font-weight: bolder;
-}
-#group {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-#group p {
-  margin-right: 20px;
 }
 .text div {
   display: flex;
@@ -85,23 +68,47 @@ button {
 }
 
 #section2 {
-  width: 100%;
-  height: 200px;
-  padding-top: 100px;
+    padding: 20px;
+    background-color: #f9f9f9;
 }
 
-#section2 h1 {
-  font-size: 1.5rem;
-  font-weight: bolder;
-  padding-bottom: 20px;
+.section2_memberInfo h3 {
+    font-size: 1.5rem;
+    color: #333;
+    margin-bottom: 15px;
 }
 
-#section2 div img {
-  width: 100px;
-  height: 100px;
-  border-radius: 200px;
+.club_info {
+    display: flex;
+    flex-wrap: wrap;
+	justify-content: flex-start;
 }
 
-.club-img {
-  padding: 10px;
+.club_info div {
+	width: 100px;
+	display: flex;
+	flex-direction: column;
+}
+
+.club_img {
+    width: 50px; 
+    object-fit: cover; 
+    border-radius: 8px; 
+    border: 2px solid #ddd; 
+}
+.club_box {
+	display: flex;
+	
+}
+
+.club_info p {
+    font-size: 0.7rem;
+    color: #555;
+    text-align: center;
+    margin-top: 5px;
+}
+
+
+.section2_memberInfo {
+    margin-bottom: 30px; 
 }
